--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Header */
+
 h2 {
   font-size: 1.7em;
 }
@@ -13,6 +15,8 @@ h2 {
   height: 200px;
   border-radius: 100px;
 }
+
+/* Header links */
 
 .links {
   text-align: right;
@@ -40,11 +44,53 @@ h2 {
   width: 30px;
 }
 
+/* Intro */
+
 .intro {
   font-size: 1em;
 }
 
+/* Main content */
+
 .content {
   margin: 1% 20% 1%;
   text-align: justify;
+}
+
+/* Tabs */
+
+.tab-list {
+  text-align: center;
+  padding: 0;
+}
+
+.tab-list .tab-link {
+  list-style: none;
+  display: inline-block;
+  border: 1px solid #287eff;
+  padding: 6px;
+  cursor: pointer;
+  color: #287eff;
+  background-color: #ffffff;
+  margin: auto;
+}
+
+.tab-list .tab-link:first-child {
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.tab-list .tab-link:last-child {
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+}
+
+.tab-list .tab-link:hover {
+  background-color: #287eff;
+  color: #ffffff;
+}
+
+.tab-list .tab-link.tab-link--selected {
+  background-color: #287eff;
+  color: #ffffff;
 }
