--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans';
+  font-size: 12px;
+  line-height: 1.5em;
 }
 
 *:focus {
