--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -75,6 +75,22 @@ h2 {
   margin-top: 50px;
 }
 
+@media only screen and (max-device-width : 568px) {
+  .header-picture {
+    height: 120px;
+    border-radius: 60px;
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (max-device-width : 800px) {
+  .header-picture {
+    height: 140px;
+    border-radius: 70px;
+    margin-top: 40px;
+  }
+}
+
 .header-arrow-container {
   position: absolute;
   bottom: 0;
@@ -141,6 +157,18 @@ h2 {
   font-size: 1.4em;
 }
 
+@media only screen and (max-device-width : 568px) {
+  .tab-list .tab-link {
+    padding: 10px 15px;
+  }
+}
+
+@media only screen and (max-device-width : 800px) {
+  .tab-list .tab-link {
+    padding: 12px 20px;
+  }
+}
+
 .tab-list .tab-link.tab-link--selected, .tab-list .tab-link:hover {
   background-color: #ffffff;
   color: #287eff;
@@ -160,6 +188,12 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media only screen and (max-device-width : 568px) {
+  .react-tabs__tab-panel {
+    margin: 0 5% 0;
+  }
 }
 
 .react-tabs__tab-panel--selected {
