--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -144,6 +144,9 @@ h2 {
   margin-top: 0;
   margin-bottom: 0;
   width: 100%;
+  visibility: hidden;
+  position: fixed;
+  top: -40px;
 }
 
 .tab-list .tab-link {
@@ -177,6 +180,8 @@ h2 {
 .tab-list--fixed {
   position: fixed;
   top: 0;
+  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+  visibility: visible;
 }
 
 .react-tabs {
