--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -69,6 +69,11 @@ h2 {
   text-align: center;
 }
 
+.header p {
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
 .header-picture {
   height: 160px;
   border-radius: 80px;
@@ -81,6 +86,11 @@ h2 {
     border-radius: 70px;
     margin-top: 40px;
   }
+
+  .header p {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media only screen and (max-device-width : 568px) {
@@ -88,6 +98,11 @@ h2 {
     height: 120px;
     border-radius: 60px;
     margin-top: 30px;
+  }
+
+  .header p {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
